# Social_plexydesk

./: CMakeLists.txt
base/qt4/: CMakeLists.txt  CMakeLists.txt~  socialplugin.h
extensions/data/Social/qdbusplugindata/: CMakeLists.txt  CMakeLists.txt~  qdbusplugindata.cpp  qdbusplugindata.h
extensions/widgets/duckwidget/: CMakeLists.txt  duck.cpp  duck.desktop  duck.h  duckinterface.cpp  duckinterface.h  duckwidget.cpp  duckwidget.h  socialqdbusplugindata.h
extensions/widgets/sociotwitterwidget/: CMakeLists.txt~  socialqdbusplugindata.cpp  sociotwitter.cpp  sociotwitter.desktop  sociotwitter.h  sociotwitterinterface.cpp  sociotwitterinterface.h  sociotwitterwidget.cpp  sociotwitterwidget.h
extensions/widgets/sociotwitterwidget/sociotwitter/: CMakeLists.txt
extensions/widgets/twitterplugin/: CMakeLists.txt  twitterinterface.h  twitterplugin.cpp  twitterplugin.desktop  twitterplugin.h  twitterplugin.pro  twitterplugininterface.cpp  twitterplugininterface.h
extensions/widgets/twitterplugin/untitled folder/: twitterplugin.cpp
extensions/widgets/youtubewidget/: youtubewidget.cpp  youtubewidget.h
extensions/widgets/ysearchplugin/: CMakeLists.txt~  ysearchinterface.h  ysearchplugin.cpp  ysearchplugin.desktop  ysearchplugin.h  ysearchplugininterface.cpp  ysearchplugininterface.h
extensions/widgets/ysearchwidget/: .duckwidget.cpp.swp  CMakeLists.txt  ysearch.cpp  ysearch.desktop  ysearch.h  ysearchinterface.cpp  ysearchinterface.h  ysearchwidget.cpp  ysearchwidget.h
extensions/widgets/ysearchwidget/ysearch/: CMakeLists.txt
runner/: main.cpp
social/: 0001-Revert-added-general-SocialPlugin-access-methods-to.patch  0001-added-general-access-methods.patch  daemon.cpp  daemon.h  main.cpp  social.pro
